add some custom exceptions

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Restaurants#index</h1>
+<h1>Tous les restaurants disponibles</h1>
+
+<%= link_to "All restaurants", restaurants_path, {class: "btn btn-primary"} %>
+
 <p>Find me in app/views/restaurants/index.html.erb</p>
