--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,2 +1,5 @@
-<h1>Restaurants#show</h1>
+<h1>Tous les restaurants</h1>
+
+<%= link_to @restaurant.name, restaurant_path(@restaurant), {class: "btn btn-primary"} %>
+
 <p>Find me in app/views/restaurants/show.html.erb</p>
